Increase height to stop letters from being cut off
Letters like "j" get their bottoms cut off if the height is only 18px. Change to 22px.

--- a/src/components/input/input.mat.styl
+++ b/src/components/input/input.mat.styl
@@ -8,7 +8,7 @@
   padding 0
   color black
   background transparent
-  min-height 18px
+  min-height 22px
   font-size inherit
   overflow hidden
   resize none
@@ -25,7 +25,7 @@
     box-shadow inherit
 
 input.q-input-target
-  height 18px
+  height 22px
   outline 0
 .q-input-chips
   min-height 36px !important
